core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/mapjoin5.yf
---
name: mapjoin
graphs:
  start:
    - type: Regex
      regex: "a"
      content: "content"
      groups: {}
      output: details

    - type: MapJoin
      list: "{details}"
      mapTarget: X
      putElement: actdetail
      keys:
        enriched: final

  X:
    - type: Echo
      put: enriched
      value:
        url: "mypage.com{{actdetail}@url}"
        name: "{{actdetail}@name}"
        id: "{{actdetail}@id}"


