core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin4.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoinNode
      list: ["A", "B"]
      mapTarget: X
      putElement: "eleent"
      keys: {}

  X:
    - type: StringContainsNode
      regex: ""
      content: "{element}"


